--- a/src/components/editor/aq-editor-sidebar-log.html
+++ b/src/components/editor/aq-editor-sidebar-log.html
@@ -97,7 +97,7 @@
 	<style>
 		p {
 			font-size:11px;
-			color: black;
+			color: white;
 			margin-bottom: 0px;
 		}
 
@@ -119,7 +119,7 @@
 		#item {
 			min-width: 12px;
 			padding-right: 5px;
-			border-bottom: 1px solid #e5e5e5;
+			--border-bottom: 1px solid #e5e5e5;
 		}
 
 	</style>
