--- a/src/components/aq-homepage.html
+++ b/src/components/aq-homepage.html
@@ -20,8 +20,8 @@
     		background-color:#f6fcfa;
         height:92vh;
         --min-height:640px;
-        --background: url(../../resources/images/bg1.jpg);
-        --background-size: cover;
+        background: url(../../resources/images/bg1.jpeg);
+        background-size: cover;
 	    }
 
       #ideas {
