--- a/src/components/aq-aboutpage.html
+++ b/src/components/aq-aboutpage.html
@@ -16,35 +16,33 @@
       footer {
         border-top: 10px solid rgba(154, 157, 160, 0.2);*/
         bottom: 0px;
-        color: black; /* #9a9da0;*/
+        color: black; 
         text-align: center !important;
         padding: 19px 30px 20px;
         position: relative;
       }
 
       #container-bg {
-        background-color: #f6fcfa;
+        background: #f2fbf7;
         height: 100%;
-        --padding-top: 100px;
       }
 
       paper-tabs {
         margin-left: 20%;
         margin-right:10%;
         max-width:500px;
-       --min-width: 300px;
         margin-bottom: 20px;
         margin-top:100px;
       }
 
       paper-tab {
         width:10%;
-        color:teal;
+        color:#001b1b;
         font-size: 16px;
       }
 
       paper-tabs {
-        --paper-tabs-selection-bar-color: teal;
+        --paper-tabs-selection-bar-color: #001b1b;
       }
 
     </style>
@@ -167,12 +165,12 @@
 
   <style>
     #container {
-      color:#24293d;
+      color:#001b1b;
       --height: 100%;
       --min-height: 640px;
       margin-left: 20%;
       margin-right:10%;
-      background-color: #f6fcfa;
+      background-color: none;--#f6fcfa;
     }
 
     p {
@@ -192,13 +190,13 @@
     .header {
       font-size:40px;
       font-weight: bold;
-      color:teal;
+      color:#001b1b;
       font-style: inherit !important;
     }
 
     a {
       --text-decoration: none;
-      color: teal;
+      color: #001b1b;
       text-decoration: underline;
     }
 
