1. Added value in legends 2. Improved plotting of realtime data(updating grab by 50 points every 1s) 3. Handled plotting large datasets by using thresh-hold parameter of highchairs

--- a/src/components/common/aq-aggregatedreturns-barchart.html
+++ b/src/components/common/aq-aggregatedreturns-barchart.html
@@ -11,7 +11,8 @@
 	  			x-axis="[[xAxis]]"
 	  			tooltip-options="[[tooltip]]"
 	  			legend-options="[[legend]]"
-	  			highchart-options="[[chartOptions]]">
+	  			highchart-options="[[chartOptions]]"
+	  			plot-options="[[plotOptions]]">
 		 	</highcharts-stock>
   		</template>
 	</template>
@@ -54,7 +55,7 @@
 					type:Object,
 					value: {
 						enabled:true,
-		          		align:"right",
+		          		align:"left",
 		          		verticalAlign:'top',
 		          		y:15,
 	          	
@@ -62,6 +63,14 @@
 		          			fontSize:13,
 		          			fontWeight:"normal",
 		          		},
+
+		          		labelFormatter: function(){
+		          			var name = this.name;
+						 	var color = this.color;
+						 	var y = (this.point.y) ? this.point.y.toFixed(2) : 0.0;
+
+	          				return '<span style="color:'+ color+'">' + name + '</span>: <b>' + y +'%</b><br/>';
+	          			}
 		          	},
 				},
 
@@ -83,6 +92,39 @@
 				axisReady: {
 					type: Boolean,
 					value:false,
+				},
+
+				plotOptions:{
+					type: Object,
+					value:{
+			            series: {
+			                point: {
+			                    events: {
+			                        mouseOver: function () {
+			                        	var text = '<div style="border:1px solid black"> Date: ' + Highcharts.dateFormat('%b \ %y', this.x) + '</div>';
+			                            var chart = this.series.chart;
+			                            if (!chart.lbl) {
+                                			chart.lbl = chart.renderer.label(text, 0, -15)
+                                    			.attr({
+                                    			padding: 15,
+                                        		
+                                    		})
+                                    		.css({
+                                        		color: 'black',
+                                        		align: 'right',
+                                    		})
+                                    		.add();
+                            			}
+			                            chart.lbl
+			                                .show()
+			                                .attr({
+			                                    text: text
+			                                });
+			                        }
+								}
+							}
+						}
+					}
 				},
 
 			},
@@ -120,6 +162,7 @@
 		  						valueSuffix:'%',
 		  						pointFormat:'<span style="color:{point.color}">\u25CF</span> {series.name}: <b>{point.y}</b><br/>',
 		  					},
+
 		  				}
 	  				);	
 				}
